WebSocket 기본 구현하기 - model 계층(MessageType, ChatMessage) - WebSocketConfig를 통한 기본 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-spring.application.name=websocket-chat
+spring:
+  application:
+    name: websocket-chat
+server:
+  port: 8080
+
+logging:
+  level:
+    root: info
+    com.codeit.chat: debug
+    org.springframework.web.socket: debug
+    org.springframework.messaging: debug
